; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_block-backend.c_load_block_backend.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_block-backend.c_load_block_backend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"block_backend\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"filesystem\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"Unknown backend\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @load_block_backend(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i8* @g_key_file_get_string(i32* %6, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* null)
  store i8* %7, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %23

11:                                               ; preds = %1
  %12 = load i8*, i8** %4, align 8
  %13 = call i64 @strcmp(i8* %12, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i32* @load_filesystem_block_backend(i32* %16)
  store i32* %17, i32** %5, align 8
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @g_free(i8* %18)
  %20 = load i32*, i32** %5, align 8
  store i32* %20, i32** %2, align 8
  br label %23

21:                                               ; preds = %11
  %22 = call i32 @seaf_warning(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0))
  store i32* null, i32** %2, align 8
  br label %23

23:                                               ; preds = %21, %15, %10
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i8* @g_key_file_get_string(i32*, i8*, i8*, i32*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32* @load_filesystem_block_backend(i32*) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i32 @seaf_warning(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
